--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,25 @@
-.App {
+.girlheart img{
+  position: fixed;
+  bottom: -4px;
+  width: 100%;
+}
+
+.logo {
   text-align: center;
+  margin-top: 15vh;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.logo h1 {
+  margin: 0;
+}
+.logo p {
+  margin: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media (min-width: 555px) {
+  .girlheart img{
+    height: 70vh;
+    visibility: hidden;
   }
 }
